# se3-mono

./: .gitignore  AGENTS.md  Cargo.toml  README.md  prek.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml
apps/auto_aim/: Cargo.toml
apps/auto_aim/src/: main.rs  rbt_threads.rs
apps/control/: Cargo.toml
apps/control/src/: main.rs
apps/locomotion/: Cargo.toml
apps/locomotion/src/: main.rs
apps/replay_telemetry/: Cargo.toml
apps/sim_loop/: __init__.py  cli.py  mujoco_runtime.py  protocol.py  rerun_viewer.py  runtime.py  zoo.py
apps/sim_loop/tests/: test_cli.py  test_protocol.py  test_runtime.py  test_smoke.py
apps/visualize_cdc_state/src/: main.rs
assets/robots/serial_leg/mjcf/: serialleg_fourbar_surrogate_train.xml
cfg/: rbt_cfg.toml
crates/auto_aim_core/: Cargo.toml
crates/auto_aim_core/src/: rbt_infra.rs  rbt_mod.rs
crates/auto_aim_core/src/rbt_base/: rbt_algorithm.rs  rbt_geometry.rs
crates/auto_aim_core/src/rbt_base/rbt_algorithm/: rbt_antigravity.rs  rbt_ekf.rs  rbt_eskf.rs  rbt_ippe.rs  rbt_sort.rs
crates/auto_aim_core/src/rbt_base/rbt_geometry/: rbt_angle.rs  rbt_cylindrical2.rs  rbt_cylindrical3.rs  rbt_line2.rs  rbt_point2.rs  rbt_point3.rs  rbt_pose3.rs
crates/auto_aim_core/src/rbt_infra/: rbt_cfg.rs  rbt_err.rs  rbt_log.rs  rbt_macro.rs  rbt_ort_ep.rs  rbt_queue_async.rs
crates/auto_aim_core/src/rbt_mod/: rbt_armor.rs  rbt_detector.rs  rbt_energy_mechanism.rs  rbt_estimator.rs  rbt_fire_control.rs  rbt_mode_context.rs  rbt_runtime_router.rs  rbt_solver.rs
crates/auto_aim_core/src/rbt_mod/rbt_armor/: detected_armor.rs  solved_armor.rs
crates/auto_aim_core/src/rbt_mod/rbt_comm/: rbt_comm_device.rs  rbt_comm_frame.rs
crates/auto_aim_core/src/rbt_mod/rbt_detector/: rbt_frame.rs  rbt_yolo.rs
crates/auto_aim_core/src/rbt_mod/rbt_energy_mechanism/: big_buff_curve_ekf.rs  detected.rs  fire_control.rs  solved.rs  tracker.rs
crates/auto_aim_core/src/rbt_mod/rbt_estimator/: rbt_enemy_dynamic_model.rs  rbt_enemy_select.rs  rbt_estimator.md  rbt_ypd_angle_tracker.rs
crates/auto_aim_core/src/rbt_mod/rbt_fire_control/: controller.rs  fire_gate.rs  second_order_position_mpc.rs  shot_phase.rs  yaw_planner.rs
crates/control_core/: Cargo.toml
crates/control_core/src/: lib.rs  sender.rs
crates/locomotion_core/: Cargo.toml
crates/locomotion_core/src/: action_delay.rs  cdc.rs  command.rs  fourbar.rs  height_default.rs  lib.rs  motor.rs  observation_config.rs  ort_ep.rs  ort_policy.rs  policy_io.rs  policy_observation.rs  policy_runtime.rs  protocol.rs  recovery_observation.rs  recovery_runtime.rs  replay_telemetry.rs  robot.rs  runtime_cdc.rs  runtime_config.rs  runtime_constants.rs  runtime_dry.rs  runtime_sim.rs  visualize_cdc_state.rs
crates/se3_command/: Cargo.toml
crates/se3_command/src/: lib.rs
crates/se3_input/: Cargo.toml
crates/se3_input/src/: lib.rs
crates/se3_log/: Cargo.toml
crates/se3_log/src/: lib.rs
crates/se3_ort_ep/: Cargo.toml
crates/se3_ort_ep/src/: lib.rs
crates/zoo/: Cargo.toml
crates/zoo/src/: lib.rs
docs/: robot-monorepo-design.md  runtime-deployment-layout.md  serialleg-recovery-port.md
docs/auto_aim/: README.md  architecture.md  gap-checklist.md
scripts/: export_recovery_npz.sh  export_recovery_onnx.sh  fix_time_and_pull.sh  run_recovery.sh  visualize_cdc_state.sh
tools/: setup-onnxruntime.sh
tools/debug_gamepad_command/: Cargo.toml
tools/debug_gamepad_command/src/: main.rs
tools/replay_telemetry/: Cargo.toml
tools/replay_telemetry/src/: main.rs
tools/visualize_cdc_state/: Cargo.toml
tools/visualize_cdc_state/src/: main.rs
