[workspace]
resolver = "3"
members = [
    "apps/control",
    "apps/locomotion",
    "apps/replay_telemetry",
    "apps/visualize_cdc_state",
    "crates/control_core",
    "crates/locomotion_core",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
libc = "0.2"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["tensorrt", "openvino", "coreml", "half"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
zip = { version = "4", default-features = false, features = ["deflate"] }
