[workspace]
resolver = "3"
members = [
    "apps/auto_aim",
    "apps/locomotion",
    "crates/auto_aim_core",
    "crates/locomotion_core",
    "tools/replay_telemetry",
    "tools/visualize_cdc_state",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-queue = "0.3.12"
ctrlc = "3.5"
half = "2.7.1"
image = "0.25.10"
imageproc = "0.27.0"
jiff = { version = "0.2.28", default-features = false, features = ["std", "tz-system"] }
lazy_static = "1.5.0"
libc = "0.2"
locomotion_core = { path = "crates/locomotion_core" }
log = "0.4.32"
logforth = { version = "0.30.1", features = ["starter-log", "append-file", "append-async", "layout-text", "filter-rustlog"] }
logforth-append-async = "0.4.0"
logforth-append-file = "0.4.0"
nalgebra = "0.35.0"
ndarray = "0.17.2"
notify = "8.2.0"
ort = { version = "2.0.0-rc.12", features = ["tensorrt", "openvino", "coreml", "half"] }
rerun = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0"
tinympc-rs = { git = "https://github.com/3SE-Competitive-Robotics-Team/tinympc-rs", branch = "codex/zhongjin/nalgebra-0-35" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-serial = "5.4.5"
toml = "1.1.2"
zip = { version = "4", default-features = false, features = ["deflate"] }
