[project]
name = "se3-mono"
version = "0.1.0"
description = "RoboMaster control and MuJoCo sim loop"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mujoco==3.8.0",
    "numpy==2.4.4",
    "rerun-sdk==0.33.0",
]

[project.scripts]
se3-sim-loop = "sim_loop.cli:main"

[build-system]
requires = ["uv_build==0.11.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "apps"
module-name = ["sim_loop"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["sim_loop"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
