[package]
name = "auto_aim"
version = "0.1.0"
edition.workspace = true

[dependencies]
lib = { package = "auto_aim_core", path = "../../crates/auto_aim_core" }
half.workspace = true
image.workspace = true
log.workspace = true
ndarray.workspace = true
ort.workspace = true
rerun.workspace = true
tokio.workspace = true
