[package]
name = "auto_aim"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
auto_aim_core.workspace = true
half.workspace = true
image.workspace = true
log.workspace = true
ndarray.workspace = true
ort.workspace = true
rerun.workspace = true
se3_log.workspace = true
se3_ort_ep.workspace = true
tokio.workspace = true
