[package]
name = "auto_aim_core"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
crossbeam-queue.workspace = true
half.workspace = true
image.workspace = true
jiff.workspace = true
lazy_static.workspace = true
log.workspace = true
logforth.workspace = true
logforth-append-async.workspace = true
logforth-append-file.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
ort.workspace = true
rerun.workspace = true
se3_ort_ep.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tinympc-rs.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
toml.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.6.1", features = ["tokio"], default-features = false }
