[package]
name = "locomotion_core"
version = "0.1.0"
edition.workspace = true

[dependencies]
libc.workspace = true
ctrlc.workspace = true
ndarray.workspace = true
ort.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zip.workspace = true
