[package]
name = "se3_log"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
jiff.workspace = true
log.workspace = true
logforth.workspace = true
logforth-append-async.workspace = true
logforth-append-file.workspace = true
serde.workspace = true
thiserror.workspace = true
